--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -8,7 +8,7 @@ const cta =  data.attributes.cta
 const {request} = Astro
 ---
 
-<nav class="fixed flex items-center justify-between w-full px-12 py-6">
+<nav class="flex items-center justify-between w-full px-12 py-6">
     <figure class="relative flex items-center gap-4 text-4xl">
         <Logo/>
         <figcaption class="font-title">
