--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -6,7 +6,7 @@ import Footer from "../components/footer.astro"
 const title = ""
 const description = ""
 const url = ""
-const image = url + "/share.jpg"
+const image = url + "/share.png"
 
 ---
 <!DOCTYPE html>
