feat: prepare components & refactor loop

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,3 +1,7 @@
-<section class="mt-40 ">
-hero
+---
+import { Markdown } from 'astro/components';
+const {data}=Astro.props
+---
+<section>
+    <Markdown content={data.title}/> 
 </section>
