--- a/src/components/ctacontact.astro
+++ b/src/components/ctacontact.astro
@@ -1,6 +1,17 @@
 ---
 import { Markdown } from 'astro/components';
+import Icon from "../components/icon.astro"
+import Mail from "../images/mail-dynamic-clay.webp"
 const {data} = Astro.props
 ---
 
-<Markdown content={data.content}/>
+<section id="ctacontact" class="relative flex flex-col max-w-6xl p-4 mx-auto transition-all md:flex-row mt-36 group hover:opacity-80 bg-lgrey-light lg:rounded-3xl">
+    <img class="w-full h-full max-w-xs mx-auto -mt-24" src={Mail} alt="">
+    <div class="flex flex-col gap-4 lg:pt-24 lg:pb-28">
+    <Markdown content={data.content}/>
+            
+    </div>
+    <a class="self-end transition-all before:absolute before:inset-0" href="/realisations">
+                <Icon name="right"/>
+            </a>
+</section>
