--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,7 +3,7 @@
 import {getData } from "../functions"
 const pages = await getData('pages')
 ---
-<footer class="flex flex-col items-center justify-between md:flex-row px-14 bg-primary-darkest py-7">
+<footer class="flex flex-col items-center justify-between mt-36 md:flex-row px-14 bg-primary-darkest py-7">
     <address class="text-lwhite">
     </address>
     <nav class="flex flex-col gap-12 md:flex-row text-lwhite">
