--- a/src/components/ctacontact.astro
+++ b/src/components/ctacontact.astro
@@ -11,7 +11,7 @@ const {data} = Astro.props
     <Markdown content={data.content}/>
             
     </div>
-    <a class="self-end transition-all before:absolute before:inset-0" href="/realisations">
+    <a class="self-end transition-all before:absolute before:inset-0" href="/contact">
                 <Icon name="right"/>
             </a>
 </section>
