--- a/src/components/breadcrumb.astro
+++ b/src/components/breadcrumb.astro
@@ -2,7 +2,7 @@
 const {link,current} = Astro.props
 ---
 <nav class="mx-auto mb-16 max-w-8xl text-lgrey-dark">
-    <a href="/" class="after:content-['>'] after:mx-2">Accueil</a>
+    <a href="/" class="hover:underline hover:after:no-underline after:content-['>'] after:mx-2">Accueil</a>
     {link &&
         <a href={link.href}>{link.title}</a>
     }
