--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -1,9 +1,9 @@
 ---
 import bubble from "../images/chat-front-clay.webp"
-const answerStyle = "self-end px-4 py-2 rounded-tl-lg rounded-tr-lg rounded-bl-lg bg-lwhite"
+const answerStyle = "self-end px-4 py-2 rounded-tl-lg rounded-tr-lg rounded-bl-lg bg-lgrey-light lg:bg-lwhite"
 
 ---
-<section class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto lg:px-16 lg:py-24 bg-lgrey-light rounded-3xl">
+<section class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto lg:px-16 lg:py-24 lg:bg-lgrey-light rounded-3xl">
     <p class="ml-16">Bonjour 👋</p>
     <p class="flex items-center">
         <img class="w-10 mr-6 rounded-full" src="https://via.placeholder.com/150x150" alt="">
@@ -12,12 +12,12 @@ const answerStyle = "self-end px-4 py-2 rounded-tl-lg rounded-tr-lg rounded-bl-l
     <p class={answerStyle}>Bonjour loak</p>
     <div class={answerStyle}>
         <label for="name">Je m'appelle</label>
-        <input placeholder="Thomas" class="text-right" type="text" name="name" id="name">
+        <input placeholder="Thomas" class="text-right bg-transparent" type="text" name="name" id="name">
     </div>
     <textarea name="content" class={answerStyle + " " + " w-full max-w-2xl p-5"} placeholder="Je vous contacte pour..." id="" rows={4}></textarea>
     <div class={answerStyle}>
         <label for="email">Vous pouvez me répondre ici: </label>
-        <input placeholder="thomas@example.org" class="text-right" type="email" name="email" id="email">
+        <input placeholder="thomas@example.org" class="text-right bg-transparent" type="email" name="email" id="email">
     </div>
     <button class="inline-block p-4 text-lg leading-5 text-center transition cursor-pointer md:self-end rounded-xl hover:underline bg-primary text-lwhite hover:opacity-80">
         Envoyer
