--- a/src/components/breadcrumb.astro
+++ b/src/components/breadcrumb.astro
@@ -1,10 +1,10 @@
 ---
 const {link,current} = Astro.props
 ---
-<nav class="mx-auto mb-16 max-w-8xl text-lgrey-dark">
+<nav class="px-4 mx-auto mb-16 max-w-8xl text-lgrey-dark">
     <a href="/" class="hover:underline hover:after:no-underline after:content-['>'] after:mx-2">Accueil</a>
     {link &&
-        <a href={link.href}>{link.title}</a>
+        <a class="hover:underline hover:after:no-underline after:content-['>'] after:mx-2" href={link.href}>{link.title}</a>
     }
     <span class="text-lblack">
         {current}
