--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -1,12 +1,13 @@
 ---
 import bubble from "../images/chat-front-clay.webp"
+import logo from "../images/logo.jpg"
 const answerStyle = "self-end px-4 py-2 rounded-tl-lg rounded-tr-lg rounded-bl-lg bg-lgrey-light lg:bg-lwhite"
 
 ---
 <section class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto lg:px-16 lg:py-24 lg:bg-lgrey-light rounded-3xl">
     <p class="ml-16">Bonjour 👋</p>
     <p class="flex items-center">
-        <img class="w-10 mr-6 rounded-full" src="https://via.placeholder.com/150x150" alt="">
+        <img class="w-10 mr-6 rounded-full" src={logo} alt="">
         Laissez nous un message 😃
     </p>
     <p class={answerStyle}>Bonjour loak</p>
