--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -3,7 +3,7 @@ import "../style/global.scss"
 import Nav from "../components/nav.astro"
 import Footer from "../components/footer.astro"
 
-const {title = "loak.studio - Création de sites web dans la région de Tournai | Belgique",description = "loak.studio"} = Astro.props
+const {title = "loak.studio - Création de sites web dans la région de Tournai | Belgique",description = "loak.studio - Création de sites web dans la région de Tournai | Belgique"} = Astro.props
 const url = Astro.request.canonicalURL.href
 const image = url + "share.png"
 ---
