--- a/src/style/project.scss
+++ b/src/style/project.scss
@@ -1,7 +1,8 @@
-.project{
-    div{
-        h2{
-            @apply text-5xl;
-        }
+#project{
+    h2{
+        @apply text-5xl mb-6;
+    }
+    p{
+        @apply max-w-[64ch] text-xl;
     }
 }
