--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -39,7 +39,7 @@ const image = url + "share.png"
      <slot />
      </div>
 
-<script hoist>
+<script>
   import '../scripts/app.js';
 </script>
 </body>
