--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -4,7 +4,7 @@ import logo from "../images/logo.jpg"
 const answerStyle = "self-end px-4 py-2 rounded-tl-lg rounded-tr-lg rounded-bl-lg bg-lgrey-light lg:bg-lwhite"
 
 ---
-<form name="contact" data-netlify="true" class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto lg:px-16 lg:py-24 lg:bg-lgrey-light rounded-3xl">
+<form action="/message-send" name="contact" data-netlify="true" class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto lg:px-16 lg:py-24 lg:bg-lgrey-light rounded-3xl">
     <p class="ml-16">Bonjour 👋</p>
     <p class="flex items-center">
         <img class="w-10 mr-6 rounded-full" src={logo} alt="">
