--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,9 +1,11 @@
 ---
+import Nav from "../components/molecules/Nav.astro"
+import Footer from "../components/molecules/Footer.astro"
 import "../style/tailwind.css"
 
 const {title = "loak.studio - Création de sites web dans la région de Tournai | Belgique",description = "loak.studio - Création de sites web dans la région de Tournai | Belgique"} = Astro.props
-const url = Astro.request.href
-const image = url + "share.png"
+const url = new URL(Astro.request.url)
+const image = url.href + "share.png"
 ---
 <!DOCTYPE html>
 <html lang="fr">
@@ -19,14 +21,14 @@ const image = url + "share.png"
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content={url}>
+    <meta property="og:url" content={url.href}>
     <meta property="og:title" content={title}>
     <meta property="og:description" content={description}>
     <meta property="og:image" content={image}>
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content={url}>
+    <meta property="twitter:url" content={url.href}>
     <meta property="twitter:title" content={title}>
     <meta property="twitter:description" content={description}>
     <meta property="twitter:image" content={image}>
@@ -34,11 +36,11 @@ const image = url + "share.png"
     <script async defer src="https://nullitics.com/script.js"></script>
 </head>
 <body class="flex flex-col min-h-screen bg-lwhite">
-
+<Nav/>
      <div class="flex-1">
      <slot />
      </div>
-
+<Footer/>
 <script>
   import '../scripts/app.js';
 </script>
