--- a/src/components/molecules/Footer.astro
+++ b/src/components/molecules/Footer.astro
@@ -1,12 +1,46 @@
 ---
 import Icon from "../atoms/Icon.astro"
 const date = new Date()
+
+const contact = [
+    {
+        icon: "mail",
+        href: "mailto:contact@loak.studio",
+        text: "contact@loak.studio"
+    },
+    {
+        icon: "phone",
+        href: "tel:0032471663248",
+        text: "+32 471 66 32 48"
+    },
+    {
+        icon: "pin",
+        href: "https://www.google.be/maps/place/Rue+du+Progres+24,+7503+Tournai/",
+        text: "24 rue du progrès, Tournai"
+    }
+]
+
+const social = [
+    {
+        icon:'github',
+        href:'#'
+    },
+    {
+        icon:'linkedin',
+        href:'#'
+    },
+    {
+        icon:'instagram',
+        href:'#'
+    },
+]
+
 ---
 <footer class="flex flex-col items-center gap-4 md:flex-row mt-36 md:px-14 bg-primary-darkest py-7">
-    <div class="flex flex-col items-center gap-4 text-center md:text-left md:items-start text-lwhite">
-        <a class="flex items-center gap-4 hover:underline" href="mailto:contact@loak.studio"> <Icon size={30} name="mail"/> contact@loak.studio</a>
-        <a class="flex items-center gap-4 hover:underline" href="tel:0471663248"><Icon size={30} name="phone"/> 0471 66 32 48</a>
-        <span class="flex items-center gap-4"><Icon size={30} name="pin"/> Rue du progrès 24/1, <br> 7503 Tournai</span>
+    <div class="flex flex-col gap-4 text-center md:text-left md:items-start text-lwhite">
+        {contact.map(link=>
+          <a class="flex items-center gap-4 hover:underline" href={link.href}> <Icon size={20} name={link.icon}/>{link.text}</a>
+        )}
     </div>
     <nav class="flex flex-col items-center gap-4 mx-auto md:gap-12 md:flex-row text-lwhite">
         <a class="hover:underline" href="/">Accueil</a>
@@ -14,15 +48,11 @@ const date = new Date()
     </nav>
     <div class="flex flex-col items-center text-right md:items-end">
         <div class="flex text-lwhite">
+        {social.map(link=>
             <a class="transition-all hover:text-primary" target="_blank" href="https://github.com/loakstudio">
-                <Icon name="github"/>
+                <Icon name={link.icon}/>
             </a>
-            <a class="transition-all hover:text-primary" target="_blank" href="https://linkedin.com/loakstudio">
-                <Icon name="linkedin"/>
-            </a>
-            <a class="transition-all hover:text-primary" target="_blank" href="https://instagram.com/loakstudio">
-                <Icon name="instagram"/>
-            </a>
+        )}
         </div>
         <p class="text-lwhite">&copy; {date.getFullYear()} loak.studio - Tous droits réservés</p>
     </div>
