--- a/src/components/molecules/Nav.astro
+++ b/src/components/molecules/Nav.astro
@@ -2,7 +2,16 @@
 import Logo from "../atoms/Logo.astro"
 const {request} = Astro
 const url = new URL(Astro.request.url);
-console.log(url.pathname)
+const links = [
+    {
+        name:"Accueil",
+        href:"/"
+    },
+    {
+        name:"Contact",
+        href:"/contact"
+    }
+]
 ---
 
 <nav class="flex items-center justify-between w-full px-12 py-6">
@@ -12,8 +21,12 @@ console.log(url.pathname)
             <a href="/" class="before:absolute before:inset-0 text-primary font-title">loak.studio</a>
         </figcaption>
     </figure>
-    <div class="items-center hidden gap-12 text-lg md:flex text-grey-dark"> 
-            <a href="/" class={"transition hover:underline " + ((url.pathname == "/") ? 'text-primary' : 'hover:text-primary')}>Accueil</a>
-        
+    <div id="menu" class="fixed top-0 left-0 flex flex-col items-center w-screen h-screen gap-12 pt-20 text-lg transition-all -translate-x-full bg-opacity-75 md:pt-0 md:flex-row md:translate-x-0 md:h-auto md:w-auto bg-lwhite md:relative text-grey-dark"> 
+        {links.map(link=>
+                    <a href={link.href} class={"transition hover:underline " + ((url.pathname == link.href) ? 'text-primary' : 'hover:text-primary')}>{link.name}</a>
+        )}
     </div>
+    <button id="toggle-menu" class="z-10 md:hidden">
+        Menu
+    </button>
 </nav>
