--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -17,3 +17,7 @@
 h1,h2,h3,h4,h5{
     @apply font-title;
 }
+
+a,button{
+    @apply rounded-md focus:outline-none focus-visible:ring focus-visible:ring-primary;
+}
