--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Main from "../layouts/Main.astro"
+import Hero from "../components/molecules/Hero.astro"
 ---
 <Main>
-Main
+<Hero/>
 </Main>
