--- a/src/components/molecules/Nav.astro
+++ b/src/components/molecules/Nav.astro
@@ -8,6 +8,10 @@ const links = [
         href:"/"
     },
     {
+        name:"Réalisations",
+        href:"/realisations"
+    },
+    {
         name:"Contact",
         href:"/contact"
     }
