style(button): justify-center

--- a/src/components/atoms/CustomButton.astro
+++ b/src/components/atoms/CustomButton.astro
@@ -1,7 +1,7 @@
 ---
 import Icon from "../atoms/Icon.astro"
 const {outline,href,icon}=Astro.props
-let style = "rounded-3xl flex items-center gap-2 p-4 border-2 border-transparent transition" + " "
+let style = "rounded-3xl justify-center flex items-center gap-2 p-4 border-2 border-transparent transition" + " "
 if(outline){
     style += "bg-lwhite text-primary-darker  hover:border-primary-darker"
 }
