feat: images & main page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,15 @@
 ---
 import Main from "../layouts/Main.astro"
 import Hero from "../components/molecules/Hero.astro"
+import WhatIsLoak from "../components/molecules/WhatIsLoak.astro"
+import OurRealizations from "../components/molecules/OurRealizations.astro"
+import OurSolutions from "../components/molecules/OurSolutions.astro"
+import Process from "../components/molecules/Process.astro"
 ---
 <Main>
-<Hero/>
+    <Hero/>
+    <WhatIsLoak/>
+    <OurRealizations/>
+    <OurSolutions/>
+    <Process/>
 </Main>
