--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import WhatIsLoak from "../components/molecules/WhatIsLoak.astro"
 import OurRealizations from "../components/molecules/OurRealizations.astro"
 import OurSolutions from "../components/molecules/OurSolutions.astro"
 import Process from "../components/molecules/Process.astro"
+import WhoAreWe from "../components/molecules/WhoAreWe.astro"
 ---
 <Main>
     <Hero/>
@@ -12,4 +13,5 @@ import Process from "../components/molecules/Process.astro"
     <OurRealizations/>
     <OurSolutions/>
     <Process/>
+    <WhoAreWe/>
 </Main>
