--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,7 @@
 ---
 import Main from "../layouts/Main.astro"
+import Contactform from "../components/molecules/Contactform.astro"
 ---
 <Main>
-contact
+<Contactform/>
 </Main>
