--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import OurRealizations from "../components/molecules/OurRealizations.astro"
 import OurSolutions from "../components/molecules/OurSolutions.astro"
 import Process from "../components/molecules/Process.astro"
 import WhoAreWe from "../components/molecules/WhoAreWe.astro"
+import Ctacontact from "../components/molecules/Ctacontact.astro"
 ---
 <Main>
     <Hero/>
@@ -14,4 +15,5 @@ import WhoAreWe from "../components/molecules/WhoAreWe.astro"
     <OurSolutions/>
     <Process/>
     <WhoAreWe/>
+    <Ctacontact/>
 </Main>
