--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,9 @@
 ---
 import Main from "../layouts/Main.astro"
 import Contactform from "../components/molecules/Contactform.astro"
+import Breadcrumb from "../components/molecules/Breadcrumb.astro"
 ---
 <Main>
-<Contactform/>
+    <Breadcrumb current="Contact"/>
+    <Contactform/>
 </Main>
